fixed search bar alignment

--- a/app/stylesheets/components/home.less
+++ b/app/stylesheets/components/home.less
@@ -7,6 +7,7 @@
 
 		@media (max-width: 700px) {
 			width: 100%;
+			text-align: center;
 		}
 
 		.searchBar{
